maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: not found: value x
    x=random3()
    ^RandomMouseMaze:8: error: not found: value x
    x match
    ^