maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run()
{
  while(!estSurBiscuit())
  {
    x=random3()
    
    x match
   	{
      case 0 => droite()
      case 1 => gauche()
    }
    
    if(!estFaceMur())
    {
      avance()
    }
  }
  prendBiscuit()
}